--- a/resources/sass/comments.scss
+++ b/resources/sass/comments.scss
@@ -6,9 +6,28 @@
     text-transform: uppercase;
 }
 
+
+
+.collapsed
+{
+    opacity: 0.5;
+    cursor: pointer;
+}
+
+.collapsed .body {
+    max-height: 1.5rem;
+    position: relative;
+    overflow: hidden;
+
+}
+
+
 .comment
 {
     border-bottom: 1px solid #ccc;
+
+
+
 
     p:last-child
     {
